--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
   <div class="input-container">
-    <input id="number-input" type="number" placeholder="Enter a number (minutes)" min="0">
+    <input id="number-input" type="number" placeholder="" min="0">
   </div>
   <div class="number-display" id="number-display">0</div>
   <div class="stopwatch" id="stopwatch">00:00:00.000</div>
