--- a/index.html
+++ b/index.html
@@ -11,65 +11,18 @@
       margin: 0;
       font-family: Arial, sans-serif;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       background-color: #121212;
       color: #ffffff;
       transition: background-color 0.3s, color 0.3s;
-      position: relative;
-    }
-
-    .input-container {
-      z-index: 10;
-      margin-top: 10px;
-    }
-
-    #number-input {
-      font-size: 1.5rem;
-      padding: 10px;
-      width: 80%;
-      max-width: 300px;
-    }
-
-    .number-display {
-      flex-grow: 1;
-      font-size: 12vw; /* Relative to viewport width */
-      text-align: center;
-      line-height: 1;
     }
 
     .stopwatch {
-      flex-grow: 1;
-      font-size: 12vw; /* Relative to viewport width */
       text-align: center;
       line-height: 1;
-    }
-
-    button {
-      padding: 15px 30px;
-      font-size: 1.5rem;
-      border: none;
-      border-radius: 5px;
-      background-color: #03dac6;
-      color: #000;
-      cursor: pointer;
-      margin: 10px;
-      transition: background-color 0.3s;
-    }
-
-    button:hover {
-      background-color: #018786;
-    }
-
-    .hidden-input-area {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 5; /* Ensure it overlays the body but stays below buttons and inputs */
+      font-size: 10vw; /* Will be dynamically updated */
     }
 
     .light-mode {
@@ -79,29 +32,14 @@
   </style>
 </head>
 <body>
-  <div class="input-container">
-    <input id="number-input" type="number" placeholder="" min="0">
-  </div>
-  <div class="number-display" id="number-display">0</div>
   <div class="stopwatch" id="stopwatch">00:00:00.000</div>
-  <div class="hidden-input-area" id="hidden-area"></div>
 
   <script>
-    const numberInput = document.getElementById("number-input");
-    const numberDisplay = document.getElementById("number-display");
     const stopwatch = document.getElementById("stopwatch");
-    const hiddenArea = document.getElementById("hidden-area");
 
     let timer = null;
     let elapsedMilliseconds = 0;
     let isRunning = false;
-    let targetMinutes = 0;
-
-    // Update the displayed number
-    numberInput.addEventListener("input", () => {
-      targetMinutes = parseInt(numberInput.value, 10) || 0;
-      numberDisplay.textContent = targetMinutes;
-    });
 
     // Update stopwatch display
     function updateStopwatchDisplay() {
@@ -113,12 +51,18 @@
 
       stopwatch.textContent = `${String(hours).padStart(2, "0")}:${String(minutes).padStart(2, "0")}:${String(seconds).padStart(2, "0")}.${String(milliseconds).padStart(3, "0")}`;
 
-      // Check if elapsed time exceeds the target minutes
-      if (targetMinutes > 0 && totalSeconds >= targetMinutes * 60) {
+      // Check if elapsed time exceeds 10 minutes
+      if (totalSeconds >= 600) {
         document.body.classList.add("light-mode");
       } else {
         document.body.classList.remove("light-mode");
       }
+    }
+
+    // Adjust font size dynamically based on window size
+    function adjustFontSize() {
+      const fontSize = Math.min(window.innerWidth * 0.1, window.innerHeight * 0.15); // Adjust font size proportionally
+      stopwatch.style.fontSize = `${fontSize}px`;
     }
 
     // Start/Stop the stopwatch
@@ -135,17 +79,17 @@
       }
     }
 
-    // Handle clicks on the hidden area
-    hiddenArea.addEventListener("click", (event) => {
-      // Ignore clicks on the input box
-      const target = event.target;
-      if (target !== numberInput) {
-        toggleTimer();
-      }
+    // Handle click event to toggle the stopwatch
+    document.body.addEventListener("click", () => {
+      toggleTimer();
     });
 
-    // Initialize the stopwatch
+    // Adjust font size on window resize
+    window.addEventListener("resize", adjustFontSize);
+
+    // Initialize the stopwatch and font size
     updateStopwatchDisplay();
+    adjustFontSize();
   </script>
 </body>
 </html>
