--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Stopwatch</title>
+  <title>10分ストップウォッチ</title>
   <style>
     body {
       margin: 0;
