--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>10分ストップウォッチ</title>
+  <title>Responsive Stopwatch</title>
   <style>
     body {
       margin: 0;
@@ -40,6 +40,31 @@
     let timer = null;
     let elapsedMilliseconds = 0;
     let isRunning = false;
+    let wakeLock = null; // Wake Lock reference
+
+    // Request Wake Lock to prevent screen from turning off
+    async function requestWakeLock() {
+      try {
+        if ('wakeLock' in navigator) {
+          wakeLock = await navigator.wakeLock.request('screen');
+          console.log('Wake Lock activated');
+        }
+      } catch (err) {
+        console.error('Wake Lock failed:', err);
+      }
+    }
+
+    // Release Wake Lock when stopwatch stops
+    function releaseWakeLock() {
+      if (wakeLock !== null) {
+        wakeLock.release()
+          .then(() => {
+            console.log('Wake Lock released');
+            wakeLock = null;
+          })
+          .catch(err => console.error('Wake Lock release failed:', err));
+      }
+    }
 
     // Update stopwatch display
     function updateStopwatchDisplay() {
@@ -66,16 +91,18 @@
     }
 
     // Start/Stop the stopwatch
-    function toggleTimer() {
+    async function toggleTimer() {
       if (isRunning) {
         clearInterval(timer);
         isRunning = false;
+        releaseWakeLock(); // Release Wake Lock when stopped
       } else {
         timer = setInterval(() => {
           elapsedMilliseconds += 10; // Increment by 10 milliseconds
           updateStopwatchDisplay();
         }, 10);
         isRunning = true;
+        await requestWakeLock(); // Request Wake Lock when started
       }
     }
 
