--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     let isRunning = false;
     let animationFrameId = null;
     let wakeLock = null;
+    let isResetting = false; // リセット中かどうかのフラグ
 
     // Load saved state from localStorage
     function loadState() {
@@ -127,19 +128,21 @@
     }
 
     // Start/Stop the stopwatch
-    async function toggleTimer() {
-      if (isRunning) {
-        cancelAnimationFrame(animationFrameId);
-        isRunning = false;
-        saveState();
-        releaseWakeLock();
-      } else {
-        startTime = performance.now() - elapsedMilliseconds;
-        isRunning = true;
-        await requestWakeLock();
-        updateTimer();
+      async function toggleTimer() {
+        if (isResetting) return; // リセット中なら処理を無効化
+      
+        if (isRunning) {
+          cancelAnimationFrame(animationFrameId);
+          isRunning = false;
+          saveState();
+          releaseWakeLock();
+        } else {
+          startTime = performance.now() - elapsedMilliseconds;
+          isRunning = true;
+          await requestWakeLock();
+          updateTimer();
+        }
       }
-    }
 
     // Reset the stopwatch
     function resetTimer() {
@@ -150,6 +153,11 @@
       clearState();
       releaseWakeLock();
       updateStopwatchDisplay();
+    
+      isResetting = true; // リセット中フラグをオン
+      setTimeout(() => {
+        isResetting = false; // 500ms後に解除
+      }, 500);
     }
 
     // Handle long press to reset
