--- a/index.html
+++ b/index.html
@@ -7,18 +7,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Precise Stopwatch</title>
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
+      width: 100%;
+      height: 100%;
+      overflow: hidden; /* スクロールを無効化 */
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
       background-color: #121212;
       color: #ffffff;
       transition: background-color 0.3s, color 0.3s;
       user-select: none; /* テキスト選択を無効化 */
       -webkit-user-select: none; /* Safari 用 */
+    }
+
+    .stopwatch-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
     }
 
     .stopwatch {
@@ -34,7 +49,9 @@
   </style>
 </head>
 <body>
-  <div class="stopwatch" id="stopwatch">00:00:00.000</div>
+  <div class="stopwatch-container">
+    <div class="stopwatch" id="stopwatch">00:00:00.000</div>
+  </div>
 
   <script>
     const stopwatch = document.getElementById("stopwatch");
@@ -150,29 +167,30 @@
       clearState();
       releaseWakeLock();
       updateStopwatchDisplay();
-      console.log("Timer reset");
     }
 
-    // Handle swipe gesture for reset
-    let touchStartX = 0;
-    let touchEndX = 0;
-    const SWIPE_THRESHOLD = 50; // Minimum swipe distance in pixels
+    // Detect swipe for reset
+    let startX = 0;
 
-    document.body.addEventListener("touchstart", (event) => {
-      touchStartX = event.touches[0].clientX; // Record starting X position
-    });
-
-    document.body.addEventListener("touchend", (event) => {
-      touchEndX = event.changedTouches[0].clientX; // Record ending X position
-      const swipeDistance = touchEndX - touchStartX;
-
-      // Check if swipe is a valid reset gesture
-      if (Math.abs(swipeDistance) > SWIPE_THRESHOLD) {
-        resetTimer();
+    document.body.addEventListener("touchstart", (e) => {
+      if (e.touches.length === 1) {
+        startX = e.touches[0].clientX;
       }
     });
 
-    // Prevent resetting while toggling the timer
+    document.body.addEventListener("touchend", (e) => {
+      if (e.changedTouches.length === 1) {
+        const endX = e.changedTouches[0].clientX;
+        const diffX = endX - startX;
+
+        if (Math.abs(diffX) > 50) {
+          resetTimer();
+          console.log("Timer reset via swipe");
+        }
+      }
+    });
+
+    // Prevent restarting after reset on click
     document.body.addEventListener("click", (event) => {
       toggleTimer();
     });
